# open-pi-zero

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
config/eval/: bridge.yaml  fractal_apple.yaml  fractal_coke.yaml  fractal_drawer.yaml  fractal_move.yaml  pg_bridge.yaml  pg_bridge_mixture.yaml  pg_fractal_mixture.yaml  pg_fractal_mixture_apple.yaml  pg_fractal_mixture_coke.yaml  pg_fractal_mixture_drawer.yaml  pg_fractal_mixture_move.yaml
config/train/: bridge.yaml  fractal.yaml  pg_bridge.yaml  pg_bridge_mixture.yaml  pg_fractal_mixture.yaml  pg_oxe.yaml
doc/: convention.md  error.md  notes.md
scripts/: download.py  run.py  serialize_model.py  set_path.sh  train_4gpu.sh  try_checkpoint_in_simpler.py
scripts/data/: check_bridge.py  check_fractal.py  modify_rlds_dataset.py
scripts/tests/: data.py  import.py  oxe.py  run_paligemma.py  sampling.py  simpler.py
slurm/: eval_simpler_bridge.sh  eval_simpler_fractal.sh  modify_rlds.sh  test_training_single_gpu_no_slurm.sh  train_multi_gpu.sh  train_multi_node.sh
src/agent/: dataset.py  eval.py  eval_mixture.py  model_averaging.py  train.py  train_mixture.py
src/agent/env_adapter/: base.py  bridge_simpler.py  simpler.py
src/data/: dataloader.py  dataset.py  dataset_torch.py  obs_transforms.py  traj_transforms.py
src/data/dlimp/: augmentations.py  dataset.py  utils.py
src/data/oxe/: __init__.py  oxe_dataset_mixes.py  oxe_standardization_transforms.py
src/data/utils/: data_utils.py  goal_relabeling.py  task_augmentation.py
src/model/: kv_cache.py  lora.py
src/model/paligemma/: gemma.py  load.py  modules.py  processing.py  siglip.py  utils.py
src/model/vla/: joint_model.py  mixture.py  model.py  modules.py  pizero.py  processing.py  utils.py
src/model/vla_mixture/: aux_modules.py  mixture.py  model.py  (+4 more)
src/utils/: decorator.py  dummy.py  geometry.py  lr_scheduler.py  metric.py  monitor.py  optim.py  time.py
(+2 files in other folders)
