[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pg-vla"
version = "0.1.0"
description = "Training vision-language-action models"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "einops",
    "fire",
    "hydra-core",
    "matplotlib",
    "numpy",
    "omegaconf",
    "pillow",
    "pretty_errors",
    # "safetensors",
    "torch==2.5.0",
    "transformers",
    # "tokenizers",
    "tqdm",
    "wandb",
]

[project.urls]
Homepage = "https://pg-vla.github.io/"

[project.optional-dependencies]
rl = [
    "cython<3",
    "d4rl",
    "patchelf",
]

[tool.setuptools.packages.find]
exclude = []

[tool.wheel]
exclude = []
